--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,13 @@ html, body{
     overflow: hidden;
     background: rgb(51, 51, 51);
     background: rgba(51, 51, 51, 0.6);
+
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #rps .topBar label{
